# src/types/endpoints.ts
@@ -27,6 +27,7 @@ export const Paths = {
   Recommended: `api/protected/artists/recommended`,
   Follow: `api/protected/follow`,
   FollowedArtists: `api/protected/followed-artists`,
+  FollowedArtistsReleases: `api/releases`,
   UnfollowArtist: `api/protected/unfollow`,
   RaccoonUser: `api/protected/profile`,
   ScrapeLastFM: `api/protected/scrape-taste/lastfm`,
@@ -42,6 +43,7 @@ export const API_Paths: { [key: string]: string } = {
   Recommended: `artists/recommended`,
   Follow: `me/follow`,
   FollowedArtists: `me/followed-artists`,
+  FollowedArtistsReleases: `me/followed-artists/releases`,
   UnfollowArtist: `me/unfollow`,
   RaccoonUser: `me/profile`,
   ScrapeLastFM: `scrape-taste/lastfm`,
